# cross_platform_arbitrage_system

./: .gitignore  Cargo.toml  README.md  README.zh-CN.md
config/: categories.toml
docs/: MATCHING_VERIFICATION.md
logs/unclassified/: unclassified-2026-03-12.csv  unclassified-2026-03-18.csv
src/: arbitrage_detector.rs  category_index_manager.rs  category_mapper.rs  category_vectorizer.rs  clients.rs  cycle_report.rs  cycle_statistics.rs  event.rs  event_matcher.rs  main.rs  market.rs  market_filter.rs  market_matcher.rs  monitor_logger.rs  query_params.rs  text_vectorizer.rs  tracking.rs  unclassified_logger.rs  validation.rs  vector_index.rs
