[package]
name = "arbitrage-monitor"
version = "0.1.0"
edition = "2021"

[dependencies]

humantime = "2.1.0"
# HTTP 客户端
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }

# 错误处理
anyhow = "1.0"
thiserror = "1.0"

# 时间处理（启用 serde 功能）
chrono = { version = "0.4", features = ["serde"] }
time = "0.3"

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"

# 文本处理
rust-stemmers = "1.2.0"
regex = "1.10"

# 科学计算/机器学习
ndarray = "0.15.6"

# 字符串相似度
strsim = "0.10"

# 并发处理
futures = "0.3"
rayon = "1.10"

# 新增依赖
toml = "0.8"
once_cell = "1.19"

[dev-dependencies]
rand = "0.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1